# Cranberry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cabal.project.local  config.yaml  cranberry.cabal
.github/workflows/: publish.yml
app/: Main.hs
app/Cranberry/: Auth.hs  Config.hs  Cranstack.hs  Database.hs  LdapParser.hs  StoragePool.hs  TemplatePages.hs  Types.hs  Webserver.hs
app/Cranberry/Auth/: Ldap.hs  LdapParser.hs  OpenId.hs
web/: elm.json
web/src/: Main.elm  Main.js
web/src/Cranberry/: Logic.elm  Model.elm  Request.elm  View.elm
