cabal-version:      2.4
name:               cranberry
version:            1.0.1
synopsis:           A simple URL shortener
description:        A simple URL shortener
bug-reports:        https://github.com/noeppi-noeppi/Cranberry/issues
license:            MIT
author:             noeppi_noeppi

executable cranberry
    main-is:            Main.hs
    other-modules:      Cranberry.Types
    other-modules:      Cranberry.Config
    other-modules:      Cranberry.Database
    other-modules:      Cranberry.Auth
    other-modules:      Cranberry.TemplatePages
    other-modules:      Cranberry.Cranstack
    other-modules:      Cranberry.Webserver
    other-modules:      Cranberry.LdapParser

    build-depends:      base ^>= 4.17.2.1
    build-depends:      random ^>= 1.2.1.2
    build-depends:      bytestring ^>= 0.11.5.3
    build-depends:      utf8-string ^>= 1.0.2
    build-depends:      base64-bytestring ^>= 1.2.1.0
    build-depends:      text ^>= 2.0.2
    build-depends:      containers ^>= 0.6.7
    build-depends:      profunctors ^>= 5.6.2
    build-depends:      product-profunctors ^>= 0.11.1.1
    build-depends:      time ^>= 1.12.2
    build-depends:      directory ^>= 1.3.8.4
    build-depends:      aeson ^>= 2.2.2.0
    build-depends:      unix ^>= 2.8.5.1
    build-depends:      attoparsec ^>= 0.14.4
    build-depends:      conferer ^>= 1.1.0.0
    build-depends:      conferer-yaml ^>= 1.1.0.0
    build-depends:      postgresql-simple ^>= 0.7.0.0
    build-depends:      opaleye ^>= 0.10.3.1
    build-depends:      happstack-server ^>= 7.9.0
    build-depends:      blaze-html ^>= 0.9.2.0
    build-depends:      ldap-client ^>= 0.4.2
    build-depends:      file-embed ^>= 0.0.16.0

    hs-source-dirs:     app
    default-extensions: DeriveGeneric
    default-language:   Haskell2010
